# aod-AE-plugin

./: AGENTS.md  AdobePlugin.just  Cargo.toml  Justfile  README.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  create_release.yml  release.yml
crates/utils/: Cargo.toml
crates/utils/src/: lib.rs  spectral.rs  spectral_wgpu.rs
crates/utils/src/spectral_wgpu/shaders/: spectral_dft.wgsl
plugins/channel-remap/: Cargo.toml  Justfile  README.md  build.rs
plugins/channel-remap/src/: lib.rs
plugins/color-ajust/: Cargo.toml  Justfile  README.md  build.rs
plugins/color-change/: Cargo.toml  Justfile  README.md  build.rs
plugins/color-change/src/: lib.rs
plugins/color-composite/: Cargo.toml  Justfile  README.md  build.rs
plugins/color-composite/src/: lib.rs
plugins/color-quantize/: Cargo.toml  Justfile  README.md  build.rs
plugins/color-quantize/src/: lib.rs
plugins/color-quantize/src/gpu/wgpu/: mod.rs
plugins/color-quantize/src/gpu/wgpu/shaders/: compute.wgsl
plugins/color-select/: Cargo.toml  Justfile  README.md  build.rs
plugins/color-select/src/: lib.rs
plugins/differential-generate/src/: lib.rs
plugins/eyedropper-mask/: Cargo.toml  Justfile  README.md  build.rs
plugins/eyedropper-mask/src/: lib.rs
plugins/fft/: Cargo.toml  Justfile  README.md  build.rs
plugins/fft/src/: lib.rs
plugins/fourier-filter/: Cargo.toml  Justfile  README.md  build.rs
plugins/fourier-filter/src/: lib.rs
plugins/gabor-generate/: Cargo.toml  Justfile  README.md  build.rs
plugins/gabor-generate/src/: lib.rs
plugins/gabor-generate/src/gpu/wgpu/: mod.rs
plugins/gabor-generate/src/gpu/wgpu/shaders/: compute.wgsl
plugins/ifft/: Cargo.toml  Justfile  README.md  build.rs
plugins/ifft/src/: lib.rs
plugins/image-calculate/: Cargo.toml  build.rs
plugins/image-calculate/src/: lib.rs
plugins/image-scaler/: Cargo.toml  Justfile  README.md  build.rs
plugins/image-scaler/src/: lib.rs
plugins/line-repaint/: Cargo.toml  Justfile  README.md  build.rs
plugins/line-repaint/src/: lib.rs
plugins/mobius-transform/: build.rs
plugins/mobius-transform/src/: lib.rs
plugins/region-colorize/: build.rs
plugins/region-colorize/src/: lib.rs
plugins/singular-value-decompose/: Cargo.toml  Justfile  README.md  build.rs
plugins/singular-value-decompose/src/: lib.rs
plugins/singular-value-decompose/src/gpu/wgpu/: mod.rs
plugins/singular-value-decompose/src/gpu/wgpu/shaders/: svd_reconstruct.wgsl
plugins/voronoi-generate/: build.rs
plugins/voronoi-generate/src/: lib.rs
plugins/voronoi-generate/src/gpu/wgpu/: mod.rs
plugins/voronoi-generate/src/gpu/wgpu/shaders/: voronoi.wgsl
templates/plugin/: Cargo.toml  Cargo.toml.liquid  Justfile.liquid  README.md  build.rs.liquid  cargo-generate.toml  post-script.rhai
templates/plugin/src/: lib.rs  lib.rs.liquid
