[workspace]
resolver = "2"
members = ["plugins/*"]

[workspace.package]
edition = "2024"
license = "MPL-2.0"
authors = ["Aodaruma"]

[profile.dev]
opt-level = 3

[workspace.dependencies]
after-effects = { git = "https://github.com/virtualritz/after-effects", branch = "master" }
pipl = { git = "https://github.com/virtualritz/after-effects", branch = "master" }
rand = "0.9.2"
nalgebra = "0.34.1"
rustfft = "6.0"
num-complex = "0.4"
chrono = "0.4.42"
imageproc = "0.26.0"

[workspace.lints]
