[package]
name = "gabor_generate"
description = "Generates Blender-style Gabor texture maps."
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[features]
default = ["gpu_wgpu"]
catch-panics = []
gpu_wgpu = ["dep:wgpu", "dep:pollster", "dep:futures-intrusive", "dep:bytemuck"]

[dependencies]
after-effects = { workspace = true }
utils = { path = "../../crates/utils" }

wgpu = { workspace = true, optional = true }
bytemuck = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }
futures-intrusive = { workspace = true, optional = true }

[dev-dependencies]
pipl = { workspace = true }

[build-dependencies]
chrono.workspace = true
pipl.workspace = true

[lints]
workspace = true
